<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.test3.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.test3.ui.gallery.GalleryFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.test3.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_faq"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.test3.ui.profile.ProfileFragment"
        android:label="@string/profiletxt"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_admin_appointments"
        android:name="com.example.test3.ui.AdminFeatures.AdminAppointmentsFragment"
        android:label="@string/menu_admin_appointments"
        tools:layout="@layout/fragment_admin_appointments" />

    <fragment
        android:id="@+id/nav_admin_schedule"
        android:name="com.example.test3.ui.AdminFeatures.AdminScheduleFragment"
        android:label="@string/menu_admin_schedule"
        tools:layout="@layout/fragment_admin_schedule" />

    <fragment
        android:id="@+id/nav_admin_stats"
        android:name="com.example.test3.ui.AdminFeatures.AdminStatsFragment"
        android:label="@string/menu_admin_stats"
        tools:layout="@layout/fragment_admin_stats" />

</navigation>